--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": ["standard-with-typescript", "prettier"],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["standard-with-typescript", "plugin:prettier/recommended"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {}
 }
