--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "NodeNext",
     "esModuleInterop": true,
     "outDir": "./dist",
+    "baseUrl": "/",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
