Optimize GitHub Actions to prevent duplicate runs on PRs

--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -1,8 +1,12 @@
 name: Node.js CI Workflow
 
 on:
-  - push
-  - pull_request
+  push:
+    branches-ignore:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   cache-and-install:
