--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -9,6 +9,9 @@ on:
       - main
 
 jobs:
+  services:
+    - mongo
+
   cache-and-install:
     runs-on: ubuntu-latest
 
@@ -51,4 +54,3 @@ jobs:
 
       - name: Build Project
         run: pnpm build
-        
