--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb-memory-server": "^9.0.1",
     "mongoose": "^8.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -39,7 +40,6 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
-    "testcontainers": "^10.2.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
