--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.0.1",
     "mongoose": "^8.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/supertest": "^2.0.15",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
