Add checkPermission middleware and update eslint configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
       {
         "checksVoidReturn": false
       }
-    ]
+    ],
+    "@typescript-eslint/consistent-type-definitions": 0
   }
 }
