--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Dependency Directories
 node_modules/
 
+
 # Build Artifacts
 dist/
+
+# Testing
+coverage/
 
 # Environment Variables (Sensitive Information)
 .env
