--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "nodemon dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "test": "jest --coverage --detectOpenHandles"
+    "test": "jest --coverage --detectOpenHandles --force-exit"
   },
   "keywords": [],
   "author": "",
