Update .env.example and authsService.ts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
-# Port for the server
+# .env.example
+
+# The port number where your server will listen.
 PORT=3000
-DB_URL=<mongodbConnectionString>
+
+# The MongoDB connection string. Replace with your actual username, password, and database name.
+DB_URL=mongodb://<username>:<password>@localhost:27017/<dbname>
+
+# A secret key for signing and verifying JWT tokens. Replace with a strong, random string.
+TOKEN_SECRET=mysecretkey
+
+# Google OAuth Client ID from Google Developer Console.
+GOOGLE_CLIENT_ID=1234567890-abcdefg.apps.googleusercontent.com
