Add Codecov action for coverage reports

--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -45,5 +45,10 @@ jobs:
       - name: Run Tests
         run: pnpm test
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Build Project
         run: pnpm build
