--- a/.github/workflows/nodejs_ci.yml
+++ b/.github/workflows/nodejs_ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: pnpm lint --fix
 
       - name: Run Tests
-        run: pnpm test
+        run: pnpm test:coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
