--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint src/**/*.ts",
     "ts-watch": "tsc -w",
-    "start": "nodemon dist/server.js",
+    "start": "nodemon dist/src/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "test": "jest --detectOpenHandles --force-exit",
@@ -28,6 +28,8 @@
     "passport": "^0.6.0",
     "passport-google-id-token": "^0.4.7",
     "passport-google-oidc": "^0.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
@@ -39,6 +41,8 @@
     "@types/passport": "^1.0.15",
     "@types/passport-google-id-token": "^0.4.3",
     "@types/supertest": "^2.0.15",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "eslint": "^8.52.0",
