--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon dist/src/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
+    "initialize-permissions": "npm run build && node src/script/initializePermissionsAndRoles.js",
     "test": "jest --detectOpenHandles --force-exit",
     "test:coverage": "jest --coverage --detectOpenHandles --force-exit",
     "test:coverageWatch": "jest --watch --coverage --detectOpenHandles"
