Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "main": "dist/server.js",
   "scripts": {
     "lint": "eslint src/**/*.ts",
-    "ts-watch": "tsc -w",
-    "start": "nodemon dist/src/server.js",
-    "dev": "nodemon src/server.ts",
+    "build:watch": "tsc -w",
     "build": "tsc",
-    "initialize-permissions": "npm run build && node src/script/initializePermissionsAndRoles.js",
-    "initialize-admin": "npm run build && node src/script/initialzeAdminUser.js",
-    "initialize": "npm run initialize-permissions && npm run initialize-admin",
+    "serve:prod": "nodemon dist/src/server.js",
+    "dev": "nodemon src/server.ts",
+    "init:permissions": "npm run build && node src/script/initializePermissionsAndRoles.js",
+    "init:admin": "npm run build && node src/script/initialzeAdminUser.js",
+    "init:all": "npm run init:permissions && npm run init:admin",
     "test": "jest --detectOpenHandles --force-exit",
     "test:coverage": "jest --coverage --detectOpenHandles --force-exit",
-    "test:coverageWatch": "jest --watch --coverage --detectOpenHandles"
+    "test:watch": "jest --watch --coverage --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
