--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "license": "ISC",
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
